# py-graphql-mapper

./: .gitignore  LICENSE  MANIFEST.in  README.MD  RELEASE_NOTES.MD  cli_args.json  pyproject.toml  pytest.ini  setup.py  setup.py__codegen  setupPyGqlMap.py
.github/: FUNDING.yml
.github/workflows/: coverage.yml  python-package.yml  test-cli.yml  test-codegen.yml  test-map.yml
codegen/: README.MD  __main__.py  generator.py  network.py  queryPresets.py  query_presets.py  utils.py
codegen/src/: baseClass.py  base_class.py  consts.py  enums.py  extractor.py  printer.py  priority.py  spBuilder.py  spSchema.py  sp_builder.py  sp_schema.py  utils.py
pygqlmap/: README.MD  __init__.py  components.py  config.ini  enums.py  gqlOperations.py  gqlTypes.py  gql_operations.py  gql_types.py  helper.py  network.py
pygqlmap/src/: arg_builtin.py  base.py  builder.py  components.py  consts.py  enums.py  gqlArgBuiltin.py  gqlArguedPrimitives.py  gqlInit.py  gqlObjectInit.py  gql_init.py  logger.py  translator.py  utils.py
pygraphqlmapper/: __init__.py  builder.py  components.py  enums.py  gqlTypes.py  logger.py  network.py  utils.py
test/: README.MD  cliTest.py  codegenTest.py  consts -sample-.py  consts.py  geoDBCitiesApiUnitTest.py  githubApiUnitTest.py  helpUnitTest.py  mappingTest.py  rapidApiUnitTest.py  test.py  unitTest.py  utils.py
test/core/: consts.py  requirements.txt  test.py
test/gdbcApi/: __init__.py  client.py  consts.py  parser.py  query.py
test/models/: common.py  countries.py  country.py  countryRegion.py  countryRegions.py  objSamples.py  populatedPlace.py  populatedPlaces.py  timeZone.py
test/pgqlmCoreTest/: unitTest.py
test/tstmutation/: manuallyCreatedMutationInsertTest.py  mutationInsertTest.py  mutationUpdateTest.py
test/tstquery/: complexObjectTest.py  connectionObjectArgs_VariablesTest.py  connectionObjectChangeVisibilityTest.py  connectionObjectTest.py  connectionobjectArgs_LiteralValuesTest.py  generatedDataAsObjectTest.py  (+5 more)
tests/: README.MD  TestMapping.py  args_params_unittest.py  consts.py  gdbc_args_params_unittest.py  gdbc_unittest.py  geoDBCitiesApiUnitTest.py  gh_args_params_unittest.py  gh_unittest.py  githubApiUnitTest.py  helpUnitTest.py  help_unittest.py  ra_args_params_unittest.py  ra_unittest.py  rapidApiUnitTest.py  re_unittest.py  spot_test.py  test.py  test_Codegen.py  test_cli.py  test_codegen.py  test_mapping.py  unitTest.py  unittests.py  utils.py
(+188 files in other folders)
