[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-graphql-mapper"
version = "1.0.0"
authors = [
  { name="Alex Dap", email="shlisi2017@gmail.com" },
]
keywords = ["graphql", "mapper"]
description = "A python library to call GraphQL APIs without using hardcoded strings"
readme = "README.MD"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pgmcodegen = "codegen.__main__:main"

[project.urls]
"Homepage" = "https://github.com/dapalex/py-graphql-mapper/"
"Bug Tracker" = "https://github.com/dapalex/py-graphql-mapper/issues"